Fixed tax formula

--- a/src/app/pages/application-management/application-detail/application-detail.component.html
+++ b/src/app/pages/application-management/application-detail/application-detail.component.html
@@ -53,7 +53,7 @@
                                      <p-tag [value]="aplicanteData.pedidoInscricaoCadastroDto.status"
                                          [severity]="aplicanteData.pedidoInscricaoCadastroDto.status| statusSeverity" />
                                      <a class="ml-4" [routerLink]="['pedido-inscricao']">
-                                         <p-tag value="Baixar" icon="pi pi-download" severity="info" />
+                                         <p-tag value="Pré-visualizar" icon="pi pi-eye" severity="info" />
                                      </a>
                                  </div>
                                  }@else {
