--- a/src/app/pages/application-management/application-detail/application-detail.component.html
+++ b/src/app/pages/application-management/application-detail/application-detail.component.html
@@ -50,11 +50,11 @@
                                  <span>Formulário</span>
                                  @if (aplicanteData.pedidoInscricaoCadastroDto) {
                                  <div>
-                                     <p-tag [value]="aplicanteData.pedidoInscricaoCadastroDto.status"
-                                         [severity]="aplicanteData.pedidoInscricaoCadastroDto.status| statusSeverity" />
-                                     <a class="ml-4" [routerLink]="['pedido-inscricao']">
+                                     <a class="mr-4" [routerLink]="['pedido-inscricao']">
                                          <p-tag value="Pré-visualizar" icon="pi pi-eye" severity="info" />
                                      </a>
+                                     <p-tag [value]="aplicanteData.pedidoInscricaoCadastroDto.status"
+                                         [severity]="aplicanteData.pedidoInscricaoCadastroDto.status| statusSeverity" />
                                  </div>
                                  }@else {
                                  <p-tag value="Esboco" [severity]="'info'" />
@@ -65,8 +65,13 @@
                                  <span>Fatura</span>
                                  @if (aplicanteData.pedidoInscricaoCadastroDto &&
                                  aplicanteData.pedidoInscricaoCadastroDto.fatura) {
-                                 <p-tag [value]="aplicanteData.pedidoInscricaoCadastroDto.fatura.status"
-                                     [severity]="aplicanteData.pedidoInscricaoCadastroDto.fatura.status| statusSeverity" />
+                                 <div>
+                                     <a class="mr-4" [routerLink]="['fatura-inscricao']">
+                                         <p-tag value="Pré-visualizar" icon="pi pi-eye" severity="info" />
+                                     </a>
+                                     <p-tag [value]="aplicanteData.pedidoInscricaoCadastroDto.fatura.status"
+                                         [severity]="aplicanteData.pedidoInscricaoCadastroDto.fatura.status| statusSeverity" />
+                                 </div>
                                  }@else {
                                  <p-tag value="Nao Paga" [severity]="'secondary'" />
                                  }
