--- a/src/app/pages/application-management/fatura/fatura.component.scss
+++ b/src/app/pages/application-management/fatura/fatura.component.scss
@@ -1,3 +1,7 @@
+.p-datatable-tfoot>tr>td {
+    text-align: center;
+}
+
 .text-value {
     font-size: 12px;
     font-weight: bold;
@@ -11,7 +15,7 @@
 }
 
 .stamp {
-    margin-top: -25px;
+    margin-top: -35px;
     margin-bottom: -30px;
     /* adjust spacing */
 }
