--- a/src/app/pages/auth/verification/verification.component.html
+++ b/src/app/pages/auth/verification/verification.component.html
@@ -5,9 +5,8 @@
           <img src="/images/logo.png" style="width: 100px" alt="logo" />
           <div class="form-container text-left" style="max-width: 320px; min-width: 270px">
               <span
-                  class="text-surface-900 dark:text-surface-0 font-bold mb-2 text-2xl m-0 block p-0 ">Verification</span>
-              <span class="text-surface-600 dark:text-surface-200 font-medium">We have sent code to you
-                  email:</span>
+                  class="text-surface-900 dark:text-surface-0 font-bold mb-2 text-2xl m-0 block p-0 ">Verificação</span>
+              <span class="text-surface-600 dark:text-surface-200 font-medium">Enviámos o código para o seu e‑mail:</span>
               <div class="flex items-center mt-1 mb-6">
                   <i class="pi pi-envelope text-surface-600 dark:text-surface-200"></i>
                   <span class="text-surface-900 dark:text-surface-0 font-bold ml-2">
