--- a/src/app/pages/application-management/fatura/fatura.component.html
+++ b/src/app/pages/application-management/fatura/fatura.component.html
@@ -85,7 +85,7 @@
                     Customer
                 </span>
                 <span class="flex-1 text-value text-black">
-                    426958 (KONTA RES£ITAT AXAL ISENCAK OMERC\OI NDUSTRIA-MCl)
+                    426958 (KONTA RESEITAT TAXA LISENCA KOMERCIO INDUSTRIA-MCI)
                 </span>
             </div>
             <div class="mb-2 flex gap-2">
