--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -7,7 +7,7 @@
             </div>
             <div class="mt-2 mb-8">
                 <p class="text-xl">
-                    Trade License Management System
+                    Sistema de Gestão de <br> Licenças Comerciais e Indústriais
                 </p>
             </div>
 
@@ -34,7 +34,7 @@
                     Esqueceu-se da sua palavra-passe?
                 </a>
                 <div class="mt-6">
-                    <p-button icon="pi pi-sign-in" label="Login" [loading]="loading" (click)="login(loginForm)" pRipple
+                    <p-button icon="pi pi-sign-in" label="Logar" [loading]="loading" (click)="login(loginForm)" pRipple
                         [disabled]="!loginForm.valid" fluid></p-button>
                     <span class="flex text-sm text-surface-500 dark:text-surface-400 mt-6">Não tem uma conta?
                         <a routerLink="/auth/register" class="cursor-pointer ml-1">Registe-se aqui</a></span>
