Added QRCode to Certificate

--- a/src/app/pages/application-management/certificate-pdf/certificate-pdf.component.html
+++ b/src/app/pages/application-management/certificate-pdf/certificate-pdf.component.html
@@ -70,14 +70,21 @@
                     </div>
 
                 </div>
-                <div class="flex flex-col items-center fixed bottom-0">
-                    <div class="mt-8 mb-2 text-center">O Diretor-Geral do Comércio</div>
-                    <span class="with-image">
-                        <img src="images/stamp.png" alt="Stamp" class="stamp" width="110" height="110" />
-                        <span class="text-label text-gray-600">Donald Trump</span>
-                    </span>
-                    <div class="flex-1"></div>
-                    <span class="w-72 inline-block border-b border-black text-center text-value text-black"></span>
+                <div class="flex items-center">
+                    <div class="flex-1 flex justify-center">
+                        <!-- Centered content -->
+                        <div>
+                            <div class="mt-8 mb-2 text-center">O Diretor-Geral do Comércio</div>
+                            <span class="with-image">
+                                <img src="images/stamp.png" alt="Stamp" class="stamp" width="110" height="110" />
+                                <span class="text-label text-gray-600">Donald Trump</span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="flex justify-end">
+                        <!-- Right-aligned content -->
+                        <img src="images/qrcode.png" alt="Qrcode" class="qrcode" width="110" height="110" />
+                    </div>
                 </div>
             </div>
 
@@ -90,7 +97,7 @@
         <div class="max-w-2xl mx-auto bg-white text-black p-2 rounded shadow-lg border relative mt-10"
             style="border: 6px solid #0769C0;">
 
-            <div class="rounded min-h-screen" style="border: 2px solid #076ac0b5;">
+            <div class="rounded max-h-screen" style="border: 2px solid #076ac0b5;">
                 <!-- Header -->
                 <div class="relative z-10 text-center pt-6">
                     <div class="flex justify-center mb-3">
@@ -145,10 +152,22 @@
                             {{aplicanteData.updatedAt | date: 'yyyy'}}
                         </span>
                     </div>
-                    <div class="mt-8 mb-2 text-center">O Diretor-Geral do Comércio</div>
-                    <div class="h-12"></div>
-                    <div class="border-t w-60 mx-auto"></div>
-                    <div class="text-center mt-2 text-sm font-medium text-gray-600"></div>
+                </div>
+                <div class="flex items-center">
+                    <div class="flex-1 flex justify-center">
+                        <!-- Centered content -->
+                        <div>
+                            <div class="mt-8 mb-2 text-center">O Diretor-Geral da Indústria</div>
+                            <span class="with-image">
+                                <img src="images/stamp.png" alt="Stamp" class="stamp" width="110" height="110" />
+                                <span class="text-label text-gray-600">Donald Trump</span>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="flex justify-end">
+                        <!-- Right-aligned content -->
+                        <img src="images/qrcode.png" alt="Qrcode" class="qrcode" width="110" height="110" />
+                    </div>
                 </div>
             </div>
 
