--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -1,7 +1,7 @@
-    <p-fluid
-        class="min-h-screen text-center w-full flex items-center md:items-start justify-center flex-col bg-auto md:bg-contain !bg-no-repeat"
-        style="padding: 20% 10% 20% 10%; background: var(--exception-pages-image); background-size: contain;">
-        <div class="flex flex-col">
+<div class="text-center w-full h-full flex flex-col bg-auto md:bg-contain !bg-no-repeat"
+    style="background: var(--exception-pages-image); background-size: contain;">
+    <div id="login" class="flex flex-col">
+        <p-fluid>
             <div class="flex items-center justify-center">
                 <img src="/images/logo.png" style="width: 100px" alt="logo" />
             </div>
@@ -17,8 +17,7 @@
                 </p-message>
             </div>
             }
-
-            <form class="form-container" [formGroup]="loginForm" class="form">
+            <form class="form-container" [formGroup]="loginForm" class="form w-full">
                 <p-iconfield>
                     <p-inputicon class="pi pi-envelope" />
                     <input formControlName="username" pInputText type="text" placeholder="Email" class="block mb-4"
@@ -41,14 +40,6 @@
                 </div>
             </form>
 
-        </div>
-
-        <div class="flex items-center absolute" style="bottom: 75px">
-            <div class="flex items-center pr-6 mr-6 border-r border-surface-200 dark:border-surface-700">
-                <h4>
-                    Ministério de Comércio e Indústria
-                </h4>
-            </div>
-            <span class="text-sm text-surface-500 dark:text-surface-400 mr-4">Copyright 2025</span>
-        </div>
-    </p-fluid>
+        </p-fluid>
+    </div>
+</div>
