--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -16,7 +16,7 @@
 
 
      <div class="w-full px-8" style="background: var(--surface-ground)">
-         <p-stepper [value]="1" class="basis-[50rem]" [linear]="true">
+         <p-stepper [value]="1" class="basis-[50rem]" [linear]="false">
              <p-step-list>
                  <p-step [value]="1">Empresa</p-step>
                  <p-step [value]="2">Proprietário(a) / Titular da empresa</p-step>
@@ -144,7 +144,10 @@
                                  </div>
                              </div>
                          </form>
-                         <div class="flex pt-6 justify-end">
+                         <div class="flex pt-6 justify-between">
+                             <span class="font-medium text-surface-600 dark:text-surface-200">Já tem conta? <a
+                                     [routerLink]="['/auth/login']"
+                                     class="font-semibold cursor-pointer text-surface-900 dark:text-surface-0 hover:text-primary transition-colors duration-300">Entrar</a></span>
                              <p-button [disabled]="disableStepEmpresa()" label="Continuar" icon="pi pi-arrow-right"
                                  iconPos="right" (onClick)="activateCallback(2)" />
                          </div>
@@ -170,7 +173,7 @@
                                  @for (item of acionistasArray.controls; track $index) {
                                  @if (acionistasArray.length > 1) {
                                  <div class="text-2xl mt-6 mb-6">
-                                     <span class="mr-8">{{ item.get('sectionTitle')?.value }}</span>
+                                     <span class="mr-6">{{ item.get('sectionTitle')?.value }}</span>
                                      <p-button size="small" severity="warn" pTooltip="Eliminar acionista"
                                          tooltipPosition="right" icon="pi pi-user-minus" iconPos="left" [rounded]="true"
                                          (onClick)="removeAcionistaForm($index)" />
@@ -295,106 +298,134 @@
 
                  <p-step-panel [value]="4">
                      <ng-template #content let-activateCallback="activateCallback">
-                         <div class="max-w-3xl mx-auto py-8 space-y-8">
-                             <h1 class="text-2xl font-semibold text-center">Resumo da Inscrição</h1>
 
-                             <section class="mt-8">
-                                 <h2 class="text-xl font-medium border-b pb-1">Dados da Empresa</h2>
-                                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-                                     <div>
-                                         <span class="block font-medium">Nome da Empresa:</span>
-                                         <span class="block">{{ empresaForm.get('nome')?.value }}</span>
-                                     </div>
-                                     <div>
-                                         <span class="block font-medium">NIF:</span>
-                                         <span class="block">{{ empresaForm.get('nif')?.value }}</span>
-                                     </div>
-                                     <div>
-                                         <span class="block font-medium">Telefone:</span>
-                                         <span class="block">{{ empresaForm.get('telefone')?.value }}</span>
-                                     </div>
-                                     <div>
-                                         <span class="block font-medium">Capital Social:</span>
-                                         <span class="block">{{ empresaForm.get('capitalSocial')?.value }}</span>
-                                     </div>
-                                     <div>
-                                         <span class="block font-medium">Data de Registo:</span>
-                                         <span
-                                             class="block">{{ empresaForm.get('dataRegisto')?.value | date:'dd/MM/yyyy' }}</span>
-                                     </div>
-                                     <div>
-                                         <span class="block font-medium">Tipo de Propriedade:</span>
-                                         <span class="block">{{ empresaForm.get('tipoPropriedade')?.value.name }}</span>
-                                     </div>
-                                     <div>
-                                         <span class="block font-medium">Localização:</span>
-                                         <span class="block">
-                                             {{ empresaForm.get('sede')?.value }},
-                                             {{ empresaForm.get('aldeia')?.value.nome }},
-                                             {{ empresaForm.get('suco')?.value }},
-                                             {{ empresaForm.get('postoAdministrativo')?.value }},
-                                             {{ empresaForm.get('municipio')?.value }}
-                                         </span>
-                                     </div>
-                                 </div>
-                             </section>
-
-                             <section class="mt-8">
-                                 <h2 class="text-xl font-medium border-b pb-1">Acionistas</h2>
-                                 <div class="space-y-6">
-                                     @for (a of empresaForm.get('acionistas')?.value; track $index) {
-                                     <div class="p-4">
-                                         <h3 class="font-semibold mb-2 underline">Acionista {{ $index + 1 }}</h3>
-                                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+                         <div class="text-white">
+                             <div class="max-w-4xl mx-auto p-8">
+                                 <header class="flex items-center justify-between mb-10">
+                                     <h1 class="text-3xl font-bold text-gray-100">Resumo da Inscrição</h1>
+                                     <button icon="pi pi-save" (click)="submit(empresaForm)" [loading]="loading"
+                                         [disabled]="!empresaForm.valid" pButton pRipple label="Confirmar e Guardar"
+                                         class="w-auto"></button>
+                                 </header>
+                                 <main>
+                                     <section class="bg-gray-800 p-8 rounded-2xl shadow-lg mb-8">
+                                         <div class="flex items-center mb-6">
+                                             <i class="bi bi-buildings mr-4" style="font-size: 2rem"></i>
+                                             <h2 class="text-2xl font-semibold text-gray-200">Dados da Empresa</h2>
+                                         </div>
+                                         <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-6">
                                              <div>
-                                                 <span class="block font-medium">Nome:</span>
-                                                 <span class="block">{{ a.nome }}</span>
+                                                 <p class="text-sm text-gray-400">Nome da Empresa:</p>
+                                                 <p class="text-lg text-gray-100">{{ empresaForm.get('nome')?.value }}
+                                                 </p>
                                              </div>
                                              <div>
-                                                 <span class="block font-medium">NIF:</span>
-                                                 <span class="block">{{ a.nif }}</span>
+                                                 <p class="text-sm text-gray-400">NIF:</p>
+                                                 <p class="text-lg text-gray-100">{{ empresaForm.get('nif')?.value }}
+                                                 </p>
                                              </div>
                                              <div>
-                                                 <span class="block font-medium">Documento:</span>
-                                                 <span class="block">{{ a.tipoDocumento.name }} –
-                                                     {{ a.numeroDocumento }}</span>
+                                                 <p class="text-sm text-gray-400">Telefone:</p>
+                                                 <p class="text-lg text-gray-100">
+                                                     {{ empresaForm.get('telefone')?.value }}</p>
                                              </div>
                                              <div>
-                                                 <span class="block font-medium">Contacto:</span>
-                                                 <span class="block">{{ a.telefone }} / {{ a.email }}</span>
+                                                 <p class="text-sm text-gray-400">Capital Social:</p>
+                                                 <p class="text-lg text-gray-100">
+                                                     {{ empresaForm.get('capitalSocial')?.value }}</p>
                                              </div>
                                              <div>
-                                                 <span class="block font-medium">Ações:</span>
-                                                 <span class="block">{{ a.acoes }}</span>
+                                                 <p class="text-sm text-gray-400">Data de Registo:</p>
+                                                 <p class="text-lg text-gray-100">
+                                                     {{ empresaForm.get('dataRegisto')?.value | date: 'dd MMMM yyyy' :'':'pt'}}
+                                                 </p>
+                                             </div>
+                                             <div>
+                                                 <p class="text-sm text-gray-400">Tipo de Propriedade:</p>
+                                                 <p class="text-lg text-gray-100">
+                                                     {{ empresaForm.get('tipoPropriedade')?.value.name }}</p>
+                                             </div>
+                                             <div class="md:col-span-2">
+                                                 <p class="text-sm text-gray-400">Localização:</p>
+                                                 <p class="text-lg text-gray-100">
+                                                     {{ empresaForm.get('sede')?.value }},
+                                                     {{ empresaForm.get('aldeia')?.value.nome }},
+                                                     {{ empresaForm.get('suco')?.value }},
+                                                     {{ empresaForm.get('postoAdministrativo')?.value }},
+                                                     {{ empresaForm.get('municipio')?.value }}
+                                                 </p>
                                              </div>
                                          </div>
+                                     </section>
+                                     <section class="bg-gray-800 p-8 rounded-2xl shadow-lg">
+                                         <div class="flex items-center mb-6">
+                                             <i class="pi pi-users  mr-4" style="font-size: 2rem"></i>
+                                             <h2 class="text-2xl font-semibold text-gray-200">Acionistas</h2>
+                                         </div>
+                                         <div>
+                                             @for (a of empresaForm.get('acionistas')?.value; track $index) {
+                                             <h3 class="text-xl font-medium text-gray-300 mb-4">
+                                                 Acionista&nbsp;{{ $index + 1 }}
+                                             </h3>
+                                             <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-6 mb-6 ml-4">
+                                                 <div>
+                                                     <p class="text-sm text-gray-400">Nome:</p>
+                                                     <p class="text-lg text-gray-100">{{ a.nome }}</p>
+                                                 </div>
+                                                 <div>
+                                                     <p class="text-sm text-gray-400">NIF:</p>
+                                                     <p class="text-lg text-gray-100">{{ a.nif }}</p>
+                                                 </div>
+                                                 <div>
+                                                     <p class="text-sm text-gray-400">Documento:</p>
+                                                     <p class="text-lg text-gray-100">{{ a.tipoDocumento.name }} –
+                                                         {{ a.numeroDocumento }}
+                                                     </p>
+                                                 </div>
+                                                 <div>
+                                                     <p class="text-sm text-gray-400">Contacto:</p>
+                                                     <p class="text-lg text-gray-100">{{ a.telefone }} / {{ a.email }}
+                                                     </p>
+                                                 </div>
+                                                 <div>
+                                                     <p class="text-sm text-gray-400">Ações:</p>
+                                                     <p class="text-lg text-gray-100">{{ a.acoes }}</p>
+                                                 </div>
+                                             </div>
+                                             }
+                                         </div>
+                                     </section>
+                                     <section class="bg-gray-800 p-8 rounded-2xl shadow-lg mb-8">
+                                         <div class="flex items-center mb-6">
+                                             <i class="bi bi-person-vcard mr-4" style="font-size: 2rem"></i>
+                                             <h2 class="text-2xl font-semibold text-gray-200">Gerente/Conta de acesso
+                                             </h2>
+                                         </div>
+                                         <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-6">
+                                             <div>
+                                                 <p class="text-sm text-gray-400">Gerente:</p>
+                                                 <p class="text-lg text-gray-100">
+                                                     {{ empresaForm.get('utilizador.gerente')?.value }}
+                                                 </p>
+                                             </div>
+                                             <div>
+                                                 <p class="text-sm text-gray-400">Email:</p>
+                                                 <p class="text-lg text-gray-100">
+                                                     {{ empresaForm.get('utilizador.email')?.value }}
+                                                 </p>
+                                             </div>
+                                         </div>
+                                     </section>
+                                     <div class="mt-6 mb-6 text-left flex justify-between items-center">
+                                         <p-button label="Back" severity="secondary" icon="pi pi-arrow-left"
+                                             iconPos="left" (onClick)="activateCallback(2)" />
+                                         <button icon="pi pi-save" (click)="submit(empresaForm)" [loading]="loading"
+                                             [disabled]="!empresaForm.valid" pButton pRipple label="Confirmar e Guardar"
+                                             class="w-auto"></button>
                                      </div>
-                                     }
-
-                                 </div>
-                             </section>
-
-                             <section class="mt-8">
-                                 <h2 class="text-xl font-medium border-b pb-1">Gerente / Contas</h2>
-                                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-                                     <div>
-                                         <span class="block font-medium">Gerente:</span>
-                                         <span class="block">{{ empresaForm.get('utilizador.gerente')?.value }}</span>
-                                     </div>
-                                     <div>
-                                         <span class="block font-medium">Email:</span>
-                                         <span class="block">{{ empresaForm.get('utilizador.email')?.value }}</span>
-                                     </div>
-                                 </div>
-                             </section>
-
-                             <div class="mt-6 mb-6 text-left flex justify-between items-center">
-                                 <p-button label="Back" severity="secondary" icon="pi pi-arrow-left" iconPos="left"
-                                     (onClick)="activateCallback(2)" />
-                                 <button icon="pi pi-save" (click)="submit(empresaForm)" [loading]="loading"
-                                     [disabled]="!empresaForm.valid" pButton pRipple label="Confirmar e Guardar"
-                                     class="w-auto"></button>
+                                 </main>
                              </div>
+
                          </div>
                      </ng-template>
                  </p-step-panel>
@@ -413,17 +444,14 @@
                  </p-message>
              </div>
              }
-             <span class="font-medium text-surface-600 dark:text-surface-200">Já tem conta? <a
-                     [routerLink]="['/auth/login']"
-                     class="font-semibold cursor-pointer text-surface-900 dark:text-surface-0 hover:text-primary transition-colors duration-300">Entrar</a></span>
-             <div class="flex items-center my-6">
+             <!-- <div class="flex items-center my-6">
                  <div class="flex items-center pr-6 mr-6 border-r border-surface-200 dark:border-surface-700">
                      <h4>
                          Ministério de Comércio e Indústria
                      </h4>
                  </div>
                  <span class="text-sm text-surface-500 dark:text-surface-400 mr-4">Copyright 2025</span>
-             </div>
+             </div> -->
          </div>
      </div>
  </div>
