Readjust design in authentication pages

--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -7,7 +7,7 @@
                  <img src="/images/logo.png" style="width:85px" alt="mci-logo" />
              </div>
              <div class="mt-2 mb-8">
-                 <p class="text-xl">
+                 <p class="text-2xl font-bold">
                      Trade License Management System
                  </p>
              </div>
