--- a/src/app/pages/auth/verification/verification.component.html
+++ b/src/app/pages/auth/verification/verification.component.html
@@ -1,19 +1,25 @@
-  <p-fluid
-      class="min-h-screen text-center w-full flex items-center md:items-start justify-center flex-col bg-auto md:bg-contain !bg-no-repeat"
-      style="padding: 20% 10% 20% 10%; background: var(--exception-pages-image); background-size: contain;">
-      <div class="flex flex-col">
-          <img src="/images/logo.png" style="width: 100px" alt="logo" />
+  <div class="text-center w-full flex items-center md:items-start justify-center flex-col bg-auto md:bg-contain !bg-no-repeat"
+      style="background: var(--exception-pages-image); background-size: contain;">
+      <div class="flex flex-col items-center">
+          <div class="flex items-center justify-center">
+              <img src="/images/logo.png" style="width: 100px" alt="logo" />
+          </div>
+          <div class="mt-2 mb-8">
+              <p class="text-2xl font-bold">
+                  Sistema de Gestão de <br> Licenças Comerciais e Indústriais
+              </p>
+          </div>
           <div class="form-container text-left" style="max-width: 320px; min-width: 270px">
-              <span
-                  class="text-surface-900 dark:text-surface-0 font-bold mb-2 text-2xl m-0 block p-0 ">Verificação</span>
-              <span class="text-surface-600 dark:text-surface-200 font-medium">Enviámos o código para o seu e‑mail:</span>
-              <div class="flex items-center mt-1 mb-6">
+              <h2 class="mb-2 text-2xl m-0 block p-0 ">Verificação de Código Único</h2>
+              <span class="text-surface-600 dark:text-surface-200 font-medium">Enviámos o código único para o seu
+                  e‑mail:</span>
+              <div class="flex items-center mt-1">
                   <i class="pi pi-envelope text-surface-600 dark:text-surface-200"></i>
                   <span class="text-surface-900 dark:text-surface-0 font-bold ml-2">
                       {{ maskEmail(email) }}
                   </span>
               </div>
-              <div class="mb-8">
+              <div class="mb-6">
                   <p-messages></p-messages>
               </div>
               <div class="flex justify-between w-full items-center gap-4">
@@ -23,21 +29,13 @@
               </div>
           </div>
           <div class="mt-6 text-left" style="max-width: 320px; min-width: 270px">
-              <div class="flex items-center gap-4">
+              <div class="flex items-center justify-center gap-4">
                   <p-button icon="pi pi-times" [routerLink]="['/']" severity="danger" label="Cancelar" outlined>
                   </p-button>
-                  <p-button label="Validar" icon="pi pi-check-circle" [loading]="otpLoading"
+                  <p-button label="Validar" icon="pi pi-check-circle" fluid [loading]="otpLoading"
                       (click)="validateOTP(otpInput)" [disabled]="!otpInput.valid" pRipple>
                   </p-button>
               </div>
           </div>
       </div>
-      <div class="flex items-center absolute" style="bottom: 75px">
-          <div class="flex items-center pr-6 mr-6 border-r border-surface-200 dark:border-surface-700">
-              <h4>
-                  Ministério de Comércio e Indústria
-              </h4>
-          </div>
-          <span class="text-sm text-surface-500 dark:text-surface-400 mr-4">Copyright 2025</span>
-      </div>
-  </p-fluid>
+  </div>
