--- a/src/app/pages/application-management/application-detail/application-detail.component.html
+++ b/src/app/pages/application-management/application-detail/application-detail.component.html
@@ -4,7 +4,7 @@
          Candidatura para o Pedido Inscricacao no Cadastro {{categoria | titlecase}}
      </span>
 
-     <p-stepper [value]="1" class="basis-[50rem]">
+     <p-stepper [value]="1" class="basis-[50rem]" [linear]="!(pedidoId)">
          <p-step-list>
              <p-step [value]="1">Detalho da Aplicação</p-step>
              <p-step [value]="2">Pedido</p-step>
@@ -429,11 +429,11 @@
                                          Total
                                      </label>
                                      <p-inputgroup>
-                                         <p-inputnumber formControlName="total" mode="decimal" [minFractionDigits]="2"
-                                             [maxFractionDigits]="2" />
                                          <p-inputgroup-addon>
                                              <span class="text-2xl font-bold">$</span>
                                          </p-inputgroup-addon>
+                                         <p-inputnumber class="text-2xl" formControlName="total" mode="decimal"
+                                             [minFractionDigits]="2" [maxFractionDigits]="2" />
                                      </p-inputgroup>
                                  </div>
                                  <!-- 
@@ -489,8 +489,8 @@
                                          [loading]="faturaLoading" class="w-auto mt-3" [disabled]="!faturaForm.valid"
                                          (click)="saveFatura(faturaForm)" />
                                      @if (faturaId) {
-                                     <p-button label="Baixar Fatura" [routerLink]="['fatura-inscricao']" [outlined]="true" icon="pi pi-download"
-                                         iconPos="left" class="w-auto mt-3" />
+                                     <p-button label="Baixar Fatura" [routerLink]="['fatura-inscricao']"
+                                         [outlined]="true" icon="pi pi-download" iconPos="left" class="w-auto mt-3" />
                                      }
                                  </div>
                              </div>
@@ -499,18 +499,30 @@
                                  Carregar Recibo
                              </span>
                              <div class="card">
-                                 <p-fileupload name="demo1[]" (onUpload)="onUpload($event, 'advanced')"
-                                     [multiple]="false" accept="image/*" maxFileSize="1000000" mode="advanced"
-                                     url="https://www.primefaces.org/cdn/api/upload.php">
+                                 <p-fileupload name="file" [disabled]="uploadedFiles.length > 0" method="put"
+                                     (onUpload)="onUpload($event, 'advanced')" [maxFileSize]="maxFileSize"
+                                     [multiple]="false" accept="application/pdf" mode="advanced" [url]="uploadUrl">
                                      <ng-template #empty>
+                                         @if (uploadedFiles.length === 0) {
                                          Arraste e largue os ficheiros aqui para carregar.
+                                         }
                                      </ng-template>
                                      <ng-template #content>
-                                         @if (uploadedFiles.length) {
+                                         @if (uploadedFiles.length > 0) {
                                          <ul>
                                              @for (file of uploadedFiles; track $index) {
-                                             <li>{{ file.name }} - {{ file.size }}
-                                                 bytes
+                                             <li>
+                                                 <a class="cursor-pointer hover:underline hover:text-teal-300">
+                                                     {{ file.nome }} - {{ bytesToMBs(file.tamanho) }}
+                                                 </a>
+                                                 &nbsp;
+                                                 <p-button (click)="downloadFile(file)" [loading]="downloadLoading"
+                                                     icon="pi pi-download" [rounded]="true" [text]="true"
+                                                     severity="success" />
+                                                 &nbsp;
+                                                 <p-button icon="pi pi-trash" [rounded]="true" [text]="true"
+                                                     [loading]="deleteLoading" severity="danger"
+                                                     (click)="removeFile(file)" />
                                              </li>
                                              }
                                          </ul>
