Replace options AtividadeEconomica for Grupo and Classe Atividade

--- a/src/app/pages/application-management/fatura/fatura.component.html
+++ b/src/app/pages/application-management/fatura/fatura.component.html
@@ -65,6 +65,25 @@
                 </span>
             </div>
 
+            <div class="mb-2 flex gap-2">
+                <span class="w-1/4 text-label text-gray-600">Atividade comercial declarada:</span>
+                <span class="flex-1 text-value text-black">
+                    {{aplicanteData.pedidoInscricaoCadastroDto.classeAtividade.descricao}}
+                </span>
+
+                <span class="w-1/4 text-label text-gray-600">Códifo:</span>
+                <span class="flex-1 text-value text-black">
+                    {{aplicanteData.pedidoInscricaoCadastroDto.classeAtividade.codigo}}
+                </span>
+            </div>
+
+            <div class="mb-2 flex gap-2">
+                <span class="w-1/4 text-label text-gray-600">Superfície:</span>
+                    <span class="flex-1 text-value text-black">
+                        {{fatura.superficie}} &#13217;
+                    </span>
+            </div>
+
         </div>
 
         <div class="mb-4 border-t-4 border-double border-gray-400 pt-2">
