--- a/src/app/pages/application-management/pedido-inscricao/pedido-inscricao.component.html
+++ b/src/app/pages/application-management/pedido-inscricao/pedido-inscricao.component.html
@@ -1,9 +1,13 @@
 <div class="card">
-    <div class="grid grid-cols-1 mb-4">
-        <div class="col-span-1">
+    <div class="grid grid-cols-12 mb-4">
+        <div class="col-span-6">
             <span class="text-2xl font-bold mb-4 mr-4">Pedido de Inscrição</span>
             <p-button icon="pi pi-file-pdf" size="large" [raised]="true" printSectionId="myDiv" [useExistingCss]="true"
                 ngxPrint />
+        </div>
+        <div class="col-span-6 flex justify-end mb-4">
+            <p-button (click)="goBack()" icon="pi pi-chevron-circle-left" label="Voltar" severity="help" size="large"
+                [text]="true" [rounded]="true" [raised]="true" />
         </div>
     </div>
     <div id="myDiv" class="bg-white text-black px-4 pt-2">
@@ -159,16 +163,16 @@
 
             <div class="mb-2 flex gap-2 items-center">
                 <span class="w-1/4 text-label text-gray-600">Tipo de atividade no estabelecimento:</span>
-                <span class="flex-1 text-value text-black">{{pedido.tipoAtividade.descricao}}</span>
+                <span class="flex-1 text-value text-black">{{pedido.classeAtividade.grupoAtividade.descricao}}</span>
                 <span class="text-label text-gray-600 ml-2">Código</span>
-                <span class="w-32 text-value text-black">{{pedido.tipoAtividade.codigo}}</span>
+                <span class="w-32 text-value text-black">{{pedido.classeAtividade.grupoAtividade.codigo}}</span>
             </div>
 
             <div class="mb-2 flex gap-2 items-center">
                 <span class="w-1/4 text-label text-gray-600">Atividade principal exercida no estabelecimento:</span>
-                <span class="flex-1 text-value text-black">{{pedido.atividadePrincipal.descricao}}</span>
+                <span class="flex-1 text-value text-black">{{pedido.classeAtividade.descricao}}</span>
                 <span class="text-label text-gray-600 ml-2">Código</span>
-                <span class="w-32 text-value text-black">{{pedido.atividadePrincipal.codigo}}</span>
+                <span class="w-32 text-value text-black">{{pedido.classeAtividade.codigo}}</span>
             </div>
 
             <div class="mb-2 flex gap-2">
