--- a/src/app/pages/application-management/application-detail/application-detail.component.html
+++ b/src/app/pages/application-management/application-detail/application-detail.component.html
@@ -305,14 +305,14 @@
                              }
 
                              <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="tipoAtividade"
+                                 <label for="grupoAtividade"
                                      class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                                      Tipo de Atividade no Estabelecimento
                                  </label>
-                                 <p-select formControlName="tipoAtividade" (onChange)="tipoAtividadeChange($event)"
-                                     inputId="tipoAtividade" [options]="listaAtividadeEconomicaTipo"
-                                     optionLabel="codigo" fluid [filter]="true" filterBy="codigo,descricao"
-                                     [showClear]="true" placeholder="Selecione o tipo de atividade">
+                                 <p-select formControlName="grupoAtividade" (onChange)="tipoAtividadeChange($event)"
+                                     inputId="grupoAtividade" [options]="listaGrupoAtividade" optionLabel="codigo" fluid
+                                     [filter]="true" filterBy="codigo,descricao" [showClear]="true"
+                                     placeholder="Selecione o tipo de atividade">
                                      <ng-template let-tipo #item>
                                          <div class="flex items-center gap-2">
                                              <span>{{tipo.codigo}} </span> - <span>{{tipo.descricao}} </span>
@@ -321,22 +321,22 @@
                                  </p-select>
                              </div>
                              <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="tipoAtividadeCodigo"
+                                 <label for="grupoAtividadeCodigo"
                                      class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                                      Descricao
                                  </label>
-                                 <input formControlName="tipoAtividadeCodigo" id="tipoAtividadeCodigo" type="text"
+                                 <input formControlName="grupoAtividadeCodigo" id="grupoAtividadeCodigo" type="text"
                                      pInputText fluid />
                              </div>
                              <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="atividadePrincipal"
+                                 <label for="classeAtividade"
                                      class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                                      Atividade Principal exercida no Estabelecimento
                                  </label>
-                                 <p-select formControlName="atividadePrincipal"
-                                     (onChange)="atividadePrincipalChange($event)" inputId="atividadePrincipal"
-                                     [options]="listaAtividadeEconomicaAtividade" optionLabel="codigo" fluid
-                                     [filter]="true" filterBy="codigo,descricao" [showClear]="true"
+                                 <p-select formControlName="classeAtividade"
+                                     (onChange)="atividadePrincipalChange($event)" inputId="classeAtividade"
+                                     [options]="listaClasseAtividade" optionLabel="codigo" fluid [filter]="true"
+                                     filterBy="codigo,descricao" [showClear]="true"
                                      placeholder="Selecione a atividade principal">
                                      <ng-template let-tipo #item>
                                          <div class="flex items-center gap-2">
@@ -346,12 +346,12 @@
                                  </p-select>
                              </div>
                              <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="atividadePrincipalCodigo"
+                                 <label for="classeAtividadeCodigo"
                                      class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                                      Descricao
                                  </label>
-                                 <input formControlName="atividadePrincipalCodigo" id="atividadePrincipalCodigo"
-                                     type="text" pInputText fluid />
+                                 <input formControlName="classeAtividadeCodigo" id="classeAtividadeCodigo" type="text"
+                                     pInputText fluid />
                              </div>
 
                              <div class="mb-6 col-span-12">
@@ -384,8 +384,9 @@
                      <div class="flex pt-6 justify-between">
                          <p-button label="Back" severity="secondary" icon="pi pi-arrow-left" iconPos="right"
                              (onClick)="activateCallback(1)" />
-                         <p-button [label]="isNew? 'Guardar': 'Atualizar'" [icon]=" isNew? 'pi pi-save': 'pi pi-sync' "
-                             [loading]="pedidoLoading" iconPos="left" (click)="submit(requestForm, activateCallback)" />
+                         <p-button [label]="isNew? 'Guardar': 'Atualizar'" [disabled]="!requestForm.valid"
+                             [icon]=" isNew? 'pi pi-save': 'pi pi-sync' " [loading]="pedidoLoading" iconPos="left"
+                             (click)="submit(requestForm, activateCallback)" />
                      </div>
                  </ng-template>
              </p-step-panel>
@@ -535,7 +536,8 @@
                      <div class="flex pt-6 justify-between">
                          <p-button label="Back" severity="secondary" icon="pi pi-arrow-left" iconPos="right"
                              (onClick)="activateCallback(2)" />
-                         <p-button label="Guardar" icon="pi pi-save" iconPos="left" (onClick)="activateCallback(1)" />
+                         <p-button [disabled]="uploadedFiles.length === 0" label="Submeter" icon="pi pi-save"
+                             iconPos="left" (onClick)="activateCallback(1)" />
                      </div>
                  </ng-template>
              </p-step-panel>
