--- a/src/app/pages/application-management/certificate-pdf/certificate-pdf.component.html
+++ b/src/app/pages/application-management/certificate-pdf/certificate-pdf.component.html
@@ -52,7 +52,7 @@
                         Ministério
                         do Comércio e Indústria, pelo exercício da atividade de
                         <span class="font-semibold underline">
-                            {{aplicanteData.pedidoInscricaoCadastroDto.atividadePrincipal.descricao}}
+                            {{aplicanteData.pedidoInscricaoCadastroDto.classeAtividade.descricao}}
                         </span>, nos termos do
                         Decreto-Lei
                         n.º
@@ -137,7 +137,7 @@
                         Ministério
                         do Comércio e Indústria, pelo exercício da atividade de
                         <span class="font-semibold underline">
-                            {{aplicanteData.pedidoInscricaoCadastroDto.atividadePrincipal.descricao}}
+                            {{aplicanteData.pedidoInscricaoCadastroDto.classeAtividade.descricao}}
                         </span>, nos termos do Decreto-Lei
                         n.º
                         90/2023, de 27 de dezembro.
